# LuckyPool

./: .gitignore  README.md
contracts/: Cargo.toml  Makefile  README.md
contracts/.cargo/: config.toml
contracts/lucky_pool/: Cargo.toml
contracts/lucky_pool/src/: blend.rs  errors.rs  lib.rs  storage.rs  test.rs  test_blend.rs
contracts/lucky_pool/test_snapshots/test/: deposit_moves_usdc_into_blend.1.json  deposit_moves_usdc_into_contract.1.json  deposit_updates_position_and_pool.1.json  deposit_while_paused_panics.1.json  draw_pays_winner_minus_fee.1.json  draw_with_empty_prize_pool_panics.1.json  draw_with_no_depositors_panics.1.json  execute_draw_without_request_panics.1.json  full_withdraw_clears_position.1.json  harvest_yield_moves_accrued_interest_into_prize_pool.1.json  initialise_stores_state.1.json  initialise_twice_panics.1.json  multiple_rounds_accumulate_correctly.1.json  pause_blocks_deposits_not_withdrawals.1.json  request_draw_twice_panics.1.json  round_result_is_persisted.1.json  second_deposit_accumulates.1.json  unpause_re_enables_deposits.1.json  withdraw_more_than_balance_panics.1.json  withdraw_returns_usdc_and_burns_tickets.1.json
docs/: architecture.md  go-to-market.md  pitch.md  plan.md  randomness.md  smart-contracts.md  yield-integration.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: DepositSection.tsx  EarnSection.tsx  FAQ.tsx  FeaturesBento.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Roadmap.tsx  (+7 more)
sdk/: README.md  package-lock.json  package.json  tsconfig.json
(+15 files in other folders)
