[package]
name    = "lucky_pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "26", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "26", features = ["alloc", "testutils"] }
